# Advent-of-Code

./: .gitignore  Cargo.toml  README.md
2021/Day2/: main.py
2023/day1/src/: main.rs
2023/day10/: Cargo.toml
2023/day10/src/: main.rs
2023/day11/: Cargo.toml
2023/day11/src/: main.rs
2023/day2/src/: main.rs
2023/day3/src/: main.rs
2023/day4/src/: main.rs
2023/day6/src/: main.rs
2023/day8/: Cargo.toml
aoc2020/day1/: main.py
aoc2020/day2/: main.py
aoc2020/day3/: main.py
aoc2020/day4/: main.py
aoc2020/day5/: part1.py  part2.py
aoc2020/day6/: part1.py  part2.py
aoc2021/Day1/: main.py
aoc2021/Day3/: main.py
aoc2024/: Cargo.toml
aoc2024/day1/: Cargo.toml
aoc2024/day2/: Cargo.toml
aoc2024/day3/: Cargo.toml
aoc2024/day4/: Cargo.toml
aoc2024/day5/: Cargo.toml
aoc2024/day6/: Cargo.toml
aoc2024/day9/: Cargo.toml
aoc2025/: .rustfmt.toml  Cargo.toml
aoc2025/.zed/: debug.json
aoc2025/day1/: Cargo.toml
aoc2025/day1/src/: main.rs
aoc2025/day10/: Cargo.toml
aoc2025/day10/src/: main.rs
aoc2025/day11/: Cargo.toml
aoc2025/day11/src/: main.rs
aoc2025/day12/: Cargo.toml
aoc2025/day12/src/: main.rs
aoc2025/day13/: Cargo.toml
aoc2025/day14/: Cargo.toml
aoc2025/day15/: Cargo.toml
aoc2025/day16/: Cargo.toml
aoc2025/day17/: Cargo.toml
aoc2025/day18/: Cargo.toml
aoc2025/day19/: Cargo.toml
aoc2025/day2/: Cargo.toml
aoc2025/day2/src/: main.rs
aoc2025/day20/: Cargo.toml
aoc2025/day20/src/: main.rs
aoc2025/day21/: Cargo.toml
aoc2025/day22/: Cargo.toml
aoc2025/day23/: Cargo.toml
aoc2025/day24/: Cargo.toml
aoc2025/day25/: Cargo.toml
aoc2025/day3/: Cargo.toml
aoc2025/day3/src/: main.rs
aoc2025/day4/: Cargo.toml
aoc2025/day4/src/: main.rs
aoc2025/day5/: Cargo.toml
aoc2025/day5/src/: main.rs
aoc2025/day6/: Cargo.toml
aoc2025/day6/src/: main.rs
aoc2025/day7/: Cargo.toml
aoc2025/day7/src/: main.rs
aoc2025/day8/: Cargo.toml
aoc2025/day8/src/: main.rs
aoc2025/day9/: Cargo.toml
aoc2025/day9/src/: main.rs
src/day01/: day01.rs
src/day24/: day24.rs
(+13 files in other folders)
