[workspace]
resolver = "3"
package.version = "0.1.0"
package.edition = "2024"
members = [
	"day1",
	"day10",
	"day11",
	"day12",
	"day13",
	"day14",
	"day15",
	"day16",
	"day17",
	"day18",
	"day19",
	"day2",
	"day20",
	"day21",
	"day22",
	"day23",
	"day24",
	"day25",
	"day3",
	"day4",
	"day5",
	"day6",
	"day7",
	"day8",
	"day9",
]

[workspace.dependencies]
humantime = "2.2.0"
prettytable = "0.10.0"
nom = "8.0.0"
